# Job-Seeker-SAAS

./: LICENSE  README.md  main.py  pyproject.toml
job-SAAS/: .env  db.sqlite3  docker-compose.yml  dockerfile  pyproject.toml
job-SAAS/accounts/: urls.py  views.py
job-SAAS/accounts/migrations/templates/accounts/: login.html  signup.html
job-SAAS/accounts/templates/accounts/: login.html  signup.html
job-SAAS/core/: celery.py  settings.py  urls.py
job-SAAS/jobs/: llm_schemas.py  models.py  services.py  tasks.py  urls.py  views.py
job-SAAS/jobs/templates/: search.html
